# teste

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  app.py  build.spec  dashboard_layout.json  hwa_dashboard.db  main.py  package-lock.json  package.json  plano  pyproject.toml  requirements.txt  tsconfig.json  vite.config.js
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0bf106a88593_create_initial_tables_for_job_history_.py  329c94f2fc31_add_index_to_timestamp_column_on_job_.py
config/: config.ini.template  secret.key
src/: api_server.py  desktop_app.py  hwa_connector.py  security.py
src/api/: assets.py  config.py  hwa.py  ml.py  monitoring.py  pages.py  websockets.py
src/core/: config.py  database.py
src/hwa_neuromorphic_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: database.py  schemas.py
src/services/ml/: forecasting.py  models.py  predictor.py  trainer.py
src/services/monitoring/: job_monitor.py  websocket.py
src/tasks/: celery_app.py  ml_training.py  monitoring.py
static/css/: style.css
static/js/: config.js  config.ts  dashboard_editor.js  dashboard_editor.ts  main.js  main.ts  models.ts  realtime-monitoring.js  realtime-monitoring.ts  ui_helpers.js  ui_helpers.ts
static/js/widgets/: oqlChartWidget.js  oqlChartWidget.ts  oqlTableWidget.js  oqlTableWidget.ts  summaryWidget.js  summaryWidget.ts
templates/: base.html  config.html  dashboard_editor.html  help.html  index.html  oql_help.html
tests/: test_app.py  test_core.py  test_editor.py  test_frontend.py  test_ml.py  test_monitoring.py
