[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwa-neuromorphic-dashboard"
version = "2.0.0"
description = "HWA Workload Automation Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pystray>=0.19.0;platform_system=='Windows'",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "slowapi>=0.1.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-playwright>=0.4.0",
    "black>=23.0.0",
    "ruff>=0.1.5",
    "bandit>=1.7.0"
]
