[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwa-neuromorphic-dashboard"
version = "2.0.0"
description = "HWA Workload Automation Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=1.10.0,<2.0.0", # Pinned for compatibility
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pystray>=0.19.0;platform_system=='Windows'",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "slowapi>=0.1.9",
    "fastapi-websocket-pubsub>=0.3.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    "openai>=1.3.0",
    "langchain>=0.0.340",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "prometheus-client>=0.18.0",
    "grafana-api>=1.0.3",
    "aiosqlite>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-playwright>=0.4.0",
    "black>=23.0.0",
    "ruff>=0.1.5",
    "bandit>=1.7.0",
    "pytest-asyncio>=0.21.0",
    "jupyter>=1.0.0",
    "mlflow>=2.7.0",
    "tensorboard>=2.14.0",
]
