[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwa-neuromorphic-dashboard"
version = "2.0.0"
description = "HWA Workload Automation Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0", # Upgraded for Pydantic v2
    "pydantic>=2.6.0", # Upgraded to v2
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "pystray>=0.19.0;platform_system=='Windows'",
    "Pillow>=10.2.0",
    "cryptography>=42.0.5",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "fastapi-websocket-pubsub>=1.0.0",
    "redis>=5.0.1",
    "celery[redis]>=5.4.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.2",
    "openai>=1.12.0",
    "langchain>=0.1.5",
    "tiktoken>=0.5.2",
    "sentence-transformers>=2.3.0",
    "faiss-cpu>=1.8.0",
    "prophet>=1.1.5",
    "statsmodels>=0.14.1",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0", # Correct async driver for PostgreSQL
    "prometheus-client>=0.19.0",
    "grafana-api>=1.0.3",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "bandit>=1.7.8",
    "pytest-asyncio>=0.23.0",
    "jupyter>=1.0.0",
    "mlflow>=2.10.0",
    "tensorboard>=2.16.0",
]
